@@ -1,13 +1,16 @@
 package uk.gov.hmcts.reform.civil.ga.handler.callback.camunda.docmosis;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
@@ -19,7 +22,6 @@ import uk.gov.hmcts.reform.civil.ga.enums.welshenhancements.PreTranslationGaDocu
 import uk.gov.hmcts.reform.civil.ga.handler.GeneralApplicationBaseCallbackHandlerTest;
 import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
 import uk.gov.hmcts.reform.civil.ga.model.genapplication.GeneralApplicationPbaDetails;
-import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.Fee;
@@ -69,30 +71,27 @@ import static uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder.CUSTOMER_REFE
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(classes = {
-    GenerateApplicationDraftCallbackHandler.class,
-    JacksonAutoConfiguration.class,
-    CaseDetailsConverter.class,
-    AssignCategoryId.class
-})
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @MockBean
+    @Mock
     private Time time;
-    @MockBean
+    @Mock
     private GeneralApplicationDraftGenerator generalApplicationDraftGenerator;
-    @Autowired
+    @InjectMocks
     private GenerateApplicationDraftCallbackHandler handler;
-    @Autowired
-    private final ObjectMapper mapper = new ObjectMapper();
-    @Autowired
-    private AssignCategoryId assignCategoryId;
-    @MockBean
+    @Spy
+    private ObjectMapper mapper = new ObjectMapper()
+        .registerModule(new JavaTimeModule())
+        .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+    @Spy
+    private AssignCategoryId assignCategoryId = new AssignCategoryId();
+    @Mock
     private FeatureToggleService featureToggleService;
-    @MockBean
+    @Mock
     private GeneralAppFeesService generalAppFeesService;
-    @MockBean
+    @Mock
     private GaForLipService gaForLipService;
 
     private final LocalDate submittedOn = now();
@@ -143,15 +142,13 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
 
     @Test
     void shouldNotGenerateApplicationDraftDocument_whenAboutToSubmitEventIsCalledAndWithNoticeAndNotUrgent_LR() {
-        GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, YES, NO);
-        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
 
         verifyNoInteractions(generalApplicationDraftGenerator);
@@ -177,7 +174,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -202,7 +199,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -226,7 +223,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getPreTranslationGaDocumentType()).isEqualTo(PreTranslationGaDocumentType.APPLICATION_SUMMARY_DOC);
     }
@@ -251,7 +248,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getPreTranslationGaDocumentType()).isEqualTo(PreTranslationGaDocumentType.APPLICATION_SUMMARY_DOC);
     }
@@ -277,7 +274,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getPreTranslationGaDocumentType()).isEqualTo(PreTranslationGaDocumentType.RESPOND_TO_APPLICATION_SUMMARY_DOC);
     }
@@ -303,7 +300,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
     }
 
@@ -328,7 +325,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -336,10 +333,8 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
     @Test
     void shouldNotGenerateDraftDocument_Unpaid_ConsentApp_LR() {
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
-        GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, NO, NO);
         when(generalAppFeesService.isFreeApplication(any(GeneralApplicationCaseData.class))).thenReturn(false);
         when(time.now()).thenReturn(submittedOn.atStartOfDay());
-        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
         verifyNoInteractions(generalApplicationDraftGenerator);
     }
@@ -348,10 +343,6 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
     void shouldNotGenerateDraftDocument_whenFeeUnpaid_WithNoticeAndUrgent_LR() {
         GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, YES, YES);
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
-        caseData = caseData.toBuilder()
-            .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
-        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         when(time.now()).thenReturn(submittedOn.atStartOfDay());
@@ -379,7 +370,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -405,7 +396,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -431,7 +422,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -449,7 +440,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         when(time.now()).thenReturn(submittedOn.atStartOfDay());
 
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+        handler.handle(params);
         verifyNoInteractions(generalApplicationDraftGenerator);
     }
 
